@@ -1,6 +1,8 @@
- $Id: ChangeLog,v 1.8 2005/12/02 19:08:18 mkern Exp $
+ $Id: ChangeLog,v 1.9 2006/01/30 15:54:53 mkern Exp $
 
 gift-ares 0.3.0:
+
+	* Fixed bug which prevented downloading from other gift-ares nodes.
 
     * Added support for new handshake used with open source Ares.
 
